test/e2e/chainsaw/hybridgateway/basic-grpcroute/01-grpcRoute-grpcbin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: ($grpc_route_name)
  namespace: ($grpc_route_namespace)
  labels:
    chainsaw/test: ($test_name)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
      namespace: ($gateway_namespace)
  hostnames:
    - ($grpc_host)
  rules:
    - matches:
        - method:
            service: grpcbin.GRPCBin
            method: DummyUnary
      backendRefs:
        - name: ($grpcbin_name)
          port: 80
