test/e2e/chainsaw/hybridgateway/basic-grpcroute/02-grpcRoute-grpcbin-assert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: ($grpc_route_name)
  namespace: ($grpc_route_namespace)
status:
  parents:
    - parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: ($gateway_name)
        namespace: ($gateway_namespace)
      controllerName: konghq.com/gateway-operator
      (conditions[?type == 'Accepted']):
        - status: "True"
          reason: Accepted
      (conditions[?type == 'ResolvedRefs']):
        - status: "True"
          reason: ResolvedRefs
      (conditions[?type == 'KongRouteProgrammed']):
        - status: "True"
          reason: KongRouteProgrammed
      (conditions[?type == 'KongServiceProgrammed']):
        - status: "True"
          reason: KongServiceProgrammed
      (conditions[?type == 'KongUpstreamProgrammed']):
        - status: "True"
          reason: KongUpstreamProgrammed
      (conditions[?type == 'KongTargetProgrammed']):
        - status: "True"
          reason: KongTargetProgrammed
      (length(conditions[?type == 'KongConfigurationValid'])): 0
